# cmake-learn

./: .gitignore  CMakeLists.txt  README.md
cmake/: u_config.h.in
script/: gen.sh
src/u_common/: CMakeLists.txt  u_commonConfig.cmake.in
src/u_common/include/: api.h
src/u_common/msg/: Num.idl
src/u_common/src/: common_api.cpp  common_api.h
src/u_unit/: CMakeLists.txt
src/u_unit/src/: main.cc
thirt_part/: build.sh
